@@ -10,7 +10,7 @@
 # WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 # General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License along
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
@@ -28,6 +28,7 @@ from karl.utils import find_profiles
 from karl.views.community import get_recent_items_batch
 from karl.views.interfaces import IAtomFeed
 from karl.views.interfaces import IAtomEntry
+from karl.views.utils import convert_entities
 from karl.models.interfaces import ICommunity
 
 def format_datetime(d):
@@ -45,6 +46,15 @@ def format_datetime(d):
 
     return formatted
 
+def xml_content(f):
+    """
+    A decorator for xml content which performs entity conversions from HTML
+    to numeric XML-friendly entities.
+    """
+    def wrapper(*args, **kw):
+        return convert_entities(f(*args, **kw))
+    return wrapper
+
 class AtomFeed(object):
     """ Atom/xml view.
     """
@@ -52,32 +62,32 @@ class AtomFeed(object):
     _entries = None
     _template = "templates/atomfeed.pt"
     _subtitle = u"Recent Items"
-    
+
     def __init__(self, context, request):
         self.context = context
         self.request = request
-        
+
         self._url = model_url(context, request)
-        
+
     def __call__(self):
         xml = render_template(self._template, view=self)
         response = Response(xml, content_type="application/atom+xml")
         return response
-            
+
     @property
     def title(self):
         return self.context.title
-        
+
     @property
     def subtitle(self):
         return self._subtitle
-        
+
     @property
     def link(self):
         return self._url
-    
+
     id = link
-    
+
     @property
     def entries(self):
         if self._entries is None:
@@ -87,7 +97,7 @@ class AtomFeed(object):
             self._entries = map(adapt, self._entry_models)
 
         return self._entries
-    
+
     @property
     def _entry_models(self):
         """Provides actual content objects that need to be adapted to atom feed
@@ -101,15 +111,15 @@ class AtomEntry(object):
     atom entry, except for the entry content.
     """
     implements(IAtomEntry)
-    
+
     def __init__(self, context, request):
         self.context = context
         self.request = request
-        
+
     @property
     def title(self):
         return self.context.title
-    
+
     @property
     def uri(self):
         return model_url(self.context, self.request)
@@ -117,11 +127,11 @@ class AtomEntry(object):
     @property
     def published(self):
         return format_datetime(self.context.created)
-    
+
     @property
     def updated(self):
         return format_datetime(self.context.modified)
-    
+
     @property
     def author(self):
         profiles = find_profiles(self.context)
@@ -130,41 +140,42 @@ class AtomEntry(object):
             "name": profile.title,
             "uri": model_url(profile, self.request)
         }
-    
+
     @property
     def content(self):
         raise NotImplementedError(
             "Method must be overridden by concrete subclass.")
 
 class NullContentAtomEntry(AtomEntry):
-    """ An adapter for objects that don't really have textual content 
+    """ An adapter for objects that don't really have textual content
     appropriate for including in a feed.
     """
     @property
     def content(self):
         return None
-    
+
 class GenericAtomEntry(AtomEntry):
     """ Can adapt any model object with a "text" or "description" attribute,
     favoring "text" if it is available.
     """
     @property
+    @xml_content
     def content(self):
         if hasattr(self.context, "text"):
             return self.context.text
         if hasattr(self.context, "description"):
             return self.context.description
         raise ValueError("Cannot adapt %s" % self.context)
-    
+
 class CommunityAtomFeed(AtomFeed):
     """ Presents "Recent Activity" for community as an atom feed.
     """
     _subtitle = u"Recent Activity"
-    
+
     def __init__(self, context, request):
         assert ICommunity.providedBy(context)
         super(CommunityAtomFeed, self).__init__(context, request)
-        
+
     @property
     def _entry_models(self):
         batch = get_recent_items_batch(self.context, self.request, size=20)
